--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "vr_swarm_simulation2.sln"
+    "dotnet.defaultSolution": "vr_swarm_simulation.sln"
 }
